oss/tui-markdown/src/renderer/snapshots/tui_markdown__renderer__table__tests__custom_styles_apply_to_header_cells_body_cells_and_borders.snap
---
source: tui-markdown/src/renderer/table.rs
expression: text
---
Text::from_iter([
    Line::from(Span::from("┌───┐").red()),
    Line::from_iter([
        Span::from("│").red(),
        Span::from(" ").on_blue(),
        Span::from("A").on_blue(),
        Span::from(" ").on_blue(),
        Span::from("│").red(),
    ]),
    Line::from(Span::from("├───┤").red()),
    Line::from_iter([
        Span::from("│").red(),
        Span::from(" ").red().on_green(),
        Span::from("a").red().on_green(),
        Span::from(" ").red().on_green(),
        Span::from("│").red(),
    ]),
    Line::from(Span::from("└───┘").red()),
])
