oss/tui-markdown/src/renderer/snapshots/tui_markdown__renderer__table__tests__table_keeps_inline_features_in_cell.snap
---
source: tui-markdown/src/renderer/table.rs
expression: text
---
Text::from_iter([
    Line::from(Span::from("┌────────────────┐").dark_gray()),
    Line::from_iter([
        Span::from("│").dark_gray(),
        Span::from(" ").cyan().bold(),
        Span::from("Value").cyan().bold(),
        Span::from("          ").cyan().bold(),
        Span::from("│").dark_gray(),
    ]),
    Line::from(Span::from("├────────────────┤").dark_gray()),
    Line::from_iter([
        Span::from("│").dark_gray(),
        Span::from(" "),
        Span::from("<em>").dim(),
        Span::from("x"),
        Span::from("</em>").dim(),
        Span::from(" "),
        Span::from("$y$").magenta().italic(),
        Span::from(" "),
        Span::from("│").dark_gray(),
    ]),
    Line::from(Span::from("└────────────────┘").dark_gray()),
])
