oss/tui-markdown/src/renderer/snapshots/tui_markdown__renderer__table__tests__table_keeps_link_destination_in_cell.snap
---
source: tui-markdown/src/renderer/table.rs
expression: text
---
Text::from_iter([
    Line::from(Span::from("┌──────────┐").dark_gray()),
    Line::from_iter([
        Span::from("│").dark_gray(),
        Span::from(" ").cyan().bold(),
        Span::from("Link").cyan().bold(),
        Span::from("     ").cyan().bold(),
        Span::from("│").dark_gray(),
    ]),
    Line::from(Span::from("├──────────┤").dark_gray()),
    Line::from_iter([
        Span::from("│").dark_gray(),
        Span::from(" "),
        Span::from("docs").blue().underlined(),
        Span::from(" ("),
        Span::from("u").blue().underlined(),
        Span::from(")"),
        Span::from(" "),
        Span::from("│").dark_gray(),
    ]),
    Line::from(Span::from("└──────────┘").dark_gray()),
])
